--- a/linux-setup.yml
+++ b/linux-setup.yml
@@ -3,13 +3,13 @@
 - name: Set up Linux machines
   hosts: ubuntu
   gather_facts: false
-  become: true
 
   tasks:
     - name: Add vim 9 repo
       ansible.builtin.repo:
         repo: ppa:jonathonf/vim
         state: present
+      become: true
 
     - name: Install Ubuntu packages
       ansible.builtin.apt:
@@ -18,6 +18,7 @@
           - zsh
           - vim=2:9.0.0749-0york0~22.04
         state: present
+      become: true
 
     - name: Install vim Airline
       ansible.builtin.git:
@@ -48,6 +49,7 @@
         src: "{{ item.src }}"
         dest: "{{ item.dest }}"
         mode: "{{ item.mode }}"
+      become: true
       loop:
         # SUDO w/o password
         - src: files/sodoers
@@ -57,6 +59,13 @@
         - src: files/authorized_keys
           dest: ~/.ssh/authorized_keys
           mode: 0400
+
+    - name: Copy user files
+      ansible.builtin.copy:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        mode: "{{ item.mode }}"
+      loop:
         # aliases and helpers
         - src: files/aliases
           dest: ~/.aliases
