--- a/inventory.yml
+++ b/inventory.yml
@@ -13,12 +13,26 @@ all:
           ansible_host: ubu1.vm.jm
         ubu2:
           ansible_host: ubu2.vm.jm
+        c1-cp1:
+          ansible_host: c1-cp1.vm.jm
+        c1-node1:
+          ansible_host: c1-node1.vm.jm
+        c1-node2:
+          ansible_host: c1-node2.vm.jm
     ubuntu:
       hosts:
         mini:
-        dmz-ubu:
         ubu1:
         ubu2:
+        c1-cp1:
+        c1-node1:
+        c1-node2:
+        dmz-ubu:
+    kube:
+      hosts:
+        c1-cp1:
+        c1-node1:
+        c1-node2:
     aci:
       hosts:
         aci-sandbox:
