Fix errors on .zshrc and oh-my-zsh install

--- a/linux-setup.yml
+++ b/linux-setup.yml
@@ -22,24 +22,13 @@
         update_cache: true
       become: true
 
-    - name: Install oh-my-zsh and power-level-10k
-      ansible.builtin.shell: |
-        if [! -d "/home/josue/.oh-my-zsh"]; then
-          sh -c "$(curl -fsSL https://raw.\
-          githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended
-        fi
-        if [! -d "/home/josue/.oh-my-zsh/custom/themes/powerlevel10k"]; then
-          git clone --depth=1 https://github.com/romkatv/powerlevel10k.git \
-          /home/josue/.oh-my-zsh/custom/themes/powerlevel10k
-        fi
-
     - name: Change shell to zsh
       user:
         name: josue
         shell: /bin/zsh
       become: yes
 
-    - name: Install vim Airline
+    - name: Install vim Airline and oh-my-zsh
       ansible.builtin.git:
         repo: "{{ item.repo }}"
         dest: "{{ item.dest }}"
@@ -49,6 +38,10 @@
           dest: ~/.vim/pack/dist/start/vim-airline
         - repo: https://github.com/vim-airline/vim-airline-themes
           dest: ~/.vim/pack/dist/start/vim-airline-themes
+        - repo: https://github.com/ohmyzsh/ohmyzsh.git
+          dest: ~/.oh-my-zsh
+        - repo: https://github.com/romkatv/powerlevel10k.git
+          dest: ~/.oh-my-zsh/custom/themes/powerlevel10k
 
     - name: Set Git global vars
       community.general.git_config:
