--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,7 +1,42 @@
+# install tmux plugin manager
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
+# change prefix key to `
 unbind C-b
 set-option -g prefix `
 bind-key ` send-prefix
 
+# use mouse
 set -g mouse on
 
+# index from 1 instead of 0
 set -g base-index 1
+
+# press r to reload our tmux config
+unbind r
+bind r source-file ~/.tmux.conf
+
+# use vim keys to switch between panes
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# make border more salient
+set -g pane-active-border-style "fg=colour208 bg=#888888"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dracula/tmux'
+
+# dracula settings
+set -g @dracula-show-powerline true
+set -g @dracula-plugins "weather"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
+set -g status-position bottom
+
+# Initialize TMUX plugin manager
+# keep at bottom of file
+run `~/.tmux/plugins/tpm/tpm`
