--- a/inventory.yml
+++ b/inventory.yml
@@ -3,45 +3,40 @@ all:
   children:
     linux:
       hosts:
-        wsl:
-          ansible_host: 127.0.0.1
         mini:
           ansible_host: mini.jm
         dmz-ubu:
           ansible_host: dmz-ubu.jm
-        ubu1:
-          ansible_host: ubu1.vm.jm
-        ubu2:
-          ansible_host: ubu2.vm.jm
-        c1-cp1:
-          ansible_host: c1-cp1.vm.jm
-        c1-node1:
-          ansible_host: c1-node1.vm.jm
-        c1-node2:
-          ansible_host: c1-node2.vm.jm
-        cp46:
-          ansible_host: cp46.vm.jm
-        node47:
-          ansible_host: node47.vm.jm
-        node48:
-          ansible_host: node48.vm.jm
+        kub01:
+          ansible_host: kub01.vm.jm
+        kub02:
+          ansible_host: kub02.vm.jm
+        kub03:
+          ansible_host: kub03.vm.jm
+        kub04:
+          ansible_host: kub04.vm.jm
+        kub05:
+          ansible_host: kub05.vm.jm
+        kub06:
+          ansible_host: kub06.vm.jm
     ubuntu:
       hosts:
         dmz-ubu:
         mini:
-        ubu1:
-        ubu2:
-        c1-cp1:
-        c1-node1:
-        c1-node2:
-        # cp46:
-        # node47:
-        # node48:
+        kub01:
+        kub02:
+        kub03:
+        kub04:
+        kub05:
+        kub06:
     kube:
       hosts:
-        c1-cp1:
-        c1-node1:
-        c1-node2:
+        kub01:
+        kub02:
+        kub03:
+        kub04:
+        kub05:
+        kub06:
     aci:
       hosts:
         aci-sandbox:
