--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,4 +4,4 @@ inventory = inventory.yml
 retry_files_enabled = False
 host_key_checking = False
 timeout = 30
-remote_tmp = C:\Users\josue\tmp
+remote_tmp = $HOME/.ansible/tmp
