--- a/inventory.yml
+++ b/inventory.yml
@@ -7,47 +7,20 @@ all:
           ansible_host: mini.jm
         dmz-ubu:
           ansible_host: dmz-ubu.jm
-        kub01:
-          ansible_host: kub01.vm.jm
-        kub02:
-          ansible_host: kub02.vm.jm
-        kub03:
-          ansible_host: kub03.vm.jm
-        vdocker01:
-          ansible_host: vdocker01.jm
-        vdocker02:
-          ansible_host: vdocker02.jm
-        vdocker03:
-          ansible_host: vdocker03.jm
+        docker1:
+          ansible_host: docker1.vm.jm
     ubuntu:
       hosts:
         dmz-ubu:
-        kub01:
-        kub02:
-        # kub03:
         mini:
-        vdocker01:
-        vdocker02:
-        vdocker03:
+        docker1:
     docker:
       hosts:
-        vdocker01:
-        vdocker02:
-        vdocker03:
-    k3s:
-      hosts:
         mini:
-        kub01:
-        kub02:
-        # kub03:
+        docker1:
     aci:
       hosts:
         aci-sandbox:
           host_fqdn: aci.vm.jm
           ansible_user: admin
           ansible_password: 1234QWer
-    windows:
-      hosts:
-        jm-pc:
-          ansible_user: josue
-
