--- a/linux-setup.yml
+++ b/linux-setup.yml
@@ -13,6 +13,7 @@
           - zsh
           - tmux
           - nfs-common
+          - cifs-utils
           - git
         state: present
         update_cache: true
