Refactor tasks to roles

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,8 @@
 [defaults]
 gathering = explicit
-inventory = inventory.yml
-retry_files_enabled = False
 host_key_checking = False
-timeout = 30
+interpreter_python = auto_silent
+inventory = inventory.yml
 remote_tmp = $HOME/.ansible/tmp
+retry_files_enabled = False
+timeout = 30
