--- a/linux-setup.yml
+++ b/linux-setup.yml
@@ -1,219 +1,28 @@
 ---
 # ansible-playbook linux-setup.yml --ask-pass
 
-- name: Ubuntu installs
-  hosts: "{{ hosts }}"
+- name: Package installs and elavated user setup
+  hosts: debian
   gather_facts: false
+  become: yes
 
-  tasks:
-    - name: Install packages
-      ansible.builtin.apt:
-        pkg:
-          - eza
-          - zsh
-          - tmux
-          - nfs-common
-          - cifs-utils
-          - git
-        state: present
-        update_cache: true
-      become: true
+  roles:
+    - role: install_packages
       tags:
         - packages
+    - role: elevated_setup
+      tags:
+        - e_setup
+    - role: user_files
+      tags:
+        - files
 
-- name: Fedora installs
-  hosts: fedora
+- name: Non-root setup
+  hosts: debian
   gather_facts: false
+  become: no
 
-  tasks:
-    - name: Install packages
-      ansible.builtin.dnf:
-        pkg:
-          - eza
-          - zsh
-          - tmux
-          - nfs-utils
-          - git
-        state: present
-        update_cache: true
-      become: true
+  roles:
+    - role: normal_setup
       tags:
-        - packages
-
-- name: Set up systems
-  hosts: "{{ hosts }}"
-  gather_facts: false
-
-  tasks:
-    - name: Change shell to zsh
-      user:
-        name: "{{ item }}"
-        shell: /bin/zsh
-      become: true
-      tags:
-        - zshell
-        - root
-      loop:
-        - josue
-        - root
-
-    - name: Install vim Airline, oh-my-zsh, and TPM for josue
-      ansible.builtin.git:
-        repo: "{{ item.repo }}"
-        dest: "{{ item.dest }}"
-        version: master
-      tags:
-        - repos
-      loop:
-        - repo: https://github.com/vim-airline/vim-airline
-          dest: ~/.vim/pack/dist/start/vim-airline
-        - repo: https://github.com/vim-airline/vim-airline-themes
-          dest: ~/.vim/pack/dist/start/vim-airline-themes
-        - repo: https://github.com/ohmyzsh/ohmyzsh.git
-          dest: ~/.oh-my-zsh
-        - repo: https://github.com/romkatv/powerlevel10k.git
-          dest: ~/.oh-my-zsh/custom/themes/powerlevel10k
-        - repo: https://github.com/tmux-plugins/tpm
-          dest: ~/.tmux/plugins/tpm
-
-    - name: Install vim Airline and oh-my-zsh for root
-      ansible.builtin.git:
-        repo: "{{ item.repo }}"
-        dest: "{{ item.dest }}"
-        version: master
-      become: true
-      tags:
-        - repos
-        - root-repos
-      loop:
-        - repo: https://github.com/vim-airline/vim-airline
-          dest: /root/.vim/pack/dist/start/vim-airline
-        - repo: https://github.com/vim-airline/vim-airline-themes
-          dest: /root/.vim/pack/dist/start/vim-airline-themes
-        - repo: https://github.com/ohmyzsh/ohmyzsh.git
-          dest: /root/.oh-my-zsh
-        - repo: https://github.com/romkatv/powerlevel10k.git
-          dest: /root/.oh-my-zsh/custom/themes/powerlevel10k
-
-    - name: Set Git global vars
-      community.general.git_config:
-        name: "{{ item.name }}"
-        scope: global
-        value: "{{ item.value }}"
-      loop:
-        - name: init.defaultBranch
-          value: main
-        - name: user.name
-          value: "Josue M"
-        - name: user.email
-          value: "josue_dev@fastmail.com"
-
-    - name: Set sudoers
-      ansible.builtin.copy:
-        src: "{{ item.src }}"
-        dest: "{{ item.dest }}"
-        mode: "{{ item.mode }}"
-      become: true
-      tags:
-        - sudoers
-      loop:
-        # SUDO w/o password
-        - src: files/sodoers
-          dest: /etc/sudoers.d/josue-by-ansible
-          mode: "0440"
-
-    - name: Create directories for user
-      ansible.builtin.file:
-        path: ~/.vim/colors
-        state: directory
-        mode: "0755"
-
-    - name: Create directories for root
-      ansible.builtin.file:
-        path: /root/.vim/colors
-        state: directory
-        mode: "0755"
-      become: true
-      tags:
-        - root
-        - root-files
-
-    - name: Copy user files
-      ansible.builtin.copy:
-        src: "{{ item.src }}"
-        dest: "{{ item.dest }}"
-        mode: "{{ item.mode }}"
-      tags:
-        - user-files
-      loop:
-        # SSH stuff
-        - src: files/authorized_keys
-          dest: ~/.ssh/authorized_keys
-          mode: "0700"
-        - src: files/ssh_config
-          dest: ~/.ssh/config
-          mode: "0700"
-        # aliases and helpers
-        - src: files/aliases
-          dest: ~/.aliases
-          mode: "0664"
-        - src: files/helpers
-          dest: ~/.helpers
-          mode: "0664"
-        # tmux
-        - src: files/tmux.conf
-          dest: ~/.tmux.conf
-          mode: "0664"
-        # vim
-        - src: files/.vimrc
-          dest: ~/.vimrc
-          mode: "0664"
-        - src: files/atom-dark-256.vim
-          dest: ~/.vim/colors/atom-dark-256.vim
-          mode: "0664"
-        # zsh
-        - src: files/.zshrc
-          dest: ~/.zshrc
-          mode: "0664"
-        - src: files/.p10k.zsh
-          dest: ~/.p10k.zsh
-          mode: "0664"
-
-    - name: Copy root files
-      ansible.builtin.copy:
-        src: "{{ item.src }}"
-        dest: "{{ item.dest }}"
-        mode: "{{ item.mode }}"
-      become: true
-      tags:
-        - root-files
-        - root
-      loop:
-        - src: files/ssh_config
-          dest: /root/.ssh/config
-          mode: "0700"
-        # aliases and helpers
-        - src: files/aliases
-          dest: /root/.aliases
-          mode: "0664"
-        - src: files/helpers
-          dest: /root/.helpers
-          mode: "0664"
-        # tmux
-        - src: files/tmux.conf
-          dest: /root/.tmux.conf
-          mode: "0664"
-        # vim
-        - src: files/.vimrc
-          dest: /root/.vimrc
-          mode: "0664"
-        - src: files/atom-dark-256.vim
-          dest: /root/.vim/colors/atom-dark-256.vim
-          mode: "0664"
-        # zsh
-        - src: files/.zshrc
-          dest: /root/.zshrc
-          mode: "0664"
-        - src: files/.p10k.zsh
-          dest: /root/.p10k.zsh
-          mode: "0664"
+        - n_setup
